# my_xarm_control

./: .gitignore  LITE6_COMPATIBILITY.md  README.md  package.xml  setup.py
launch/: digital_twin_demo.launch.py  lite6_demo.launch.py  lite6_vacuum_gripper_demo.launch.py  my_xarm_demo.launch.py  vacuum_gripper_demo.launch.py
my_xarm_control/: basic_movement.py  digital_twin_controller.py  vacuum_gripper_demo.py
resource/: my_xarm_control
